--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-plan",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A React Responsive Layout Library based on flexbox.",
   "main": "dist/index.js",
   "scripts": {
@@ -33,5 +33,8 @@
     "eslint-plugin-react": "4.3.0",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1"
+  },
+  "peerDependencies": {
+    "react": "0.14.8"
   }
 }
