--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-plan",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "A React Responsive Layout Library based on flexbox.",
   "main": "dist/index.js",
   "scripts": {
     "dist": "webpack --config webpack.dist.js",
+    "dev": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --devtool eval --progress --colors --hot --content-base demo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,12 +30,25 @@
     "babel-plugin-typecheck": "3.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
+    "css-loader": "0.23.1",
     "eslint": "2.7.0",
     "eslint-plugin-react": "4.3.0",
+    "file-loader": "0.8.5",
+    "html-webpack-plugin": "2.15.0",
+    "json-loader": "0.5.4",
+    "less": "2.6.1",
+    "less-loader": "2.2.3",
+    "react": "15.0.0",
+    "react-hot-loader": "1.3.0",
+    "style-loader": "0.13.1",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1"
   },
   "peerDependencies": {
-    "react": "0.14.8"
+    "react-dom": "15.0.0"
+  },
+  "dependencies": {
+    "html-loader": "0.4.3",
+    "markdown-loader": "0.1.7"
   }
 }
