--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-plan",
-  "version": "0.3.1",
+  "version": "0.3.3",
   "description": "A React Responsive Layout Library based on flexbox.",
   "main": "dist/index.js",
   "scripts": {
@@ -38,17 +38,15 @@
     "json-loader": "0.5.4",
     "less": "2.6.1",
     "less-loader": "2.2.3",
-    "react": "15.0.0",
     "react-hot-loader": "1.3.0",
     "style-loader": "0.13.1",
     "webpack": "1.12.14",
-    "webpack-dev-server": "1.14.1"
-  },
-  "peerDependencies": {
-    "react-dom": "15.0.0"
-  },
-  "dependencies": {
+    "webpack-dev-server": "1.14.1",
     "html-loader": "0.4.3",
     "markdown-loader": "0.1.7"
+  },
+  "peerDependencies": {
+    "react": "15.0.1",
+    "react-dom": "15.0.1"
   }
 }
