--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "markdown-loader": "0.1.7"
   },
   "peerDependencies": {
-    "react": "15.0.1",
-    "react-dom": "15.0.1"
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0"
   }
 }
