--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-plan",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A React Responsive Layout Library based on flexbox.",
   "main": "dist/index.js",
   "scripts": {
@@ -25,11 +25,13 @@
   },
   "homepage": "https://github.com/111StudioKK/react-plan#readme",
   "devDependencies": {
+    "babel-core": "6.17.0",
     "babel-eslint": "6.0.2",
     "babel-loader": "6.2.4",
     "babel-plugin-typecheck": "3.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.16.0",
     "css-loader": "0.23.1",
     "eslint": "2.7.0",
     "eslint-plugin-react": "4.3.0",
@@ -52,7 +54,11 @@
   "babel": {
     "presets": [
       "es2015",
+      "stage-0",
       "react"
     ]
+  },
+  "dependencies": {
+    "custom-event-polyfill": "0.3.0"
   }
 }
